fix introduction wrapping + email address drop

--- a/css/atoms.css
+++ b/css/atoms.css
@@ -262,5 +262,5 @@
 }
 
 .display-inline {
-    display: inline;
+    display: inline !important;
 }
